# online-tools

./: Cargo.toml  README.md
html/: count_occurences.html  index.html  md5.html  sort_alphabetically.html  sort_numerically.html
src/: count_occurences.rs  hashers.rs  main.rs  md5.rs  simple_form.rs  sort_alphabetically.rs  sort_numerically.rs
src/html/: page_template.html  simple_form.html
