[package]
name = "online-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["multipart", "compression"] }
html-escape = "0.2.13"
regex = "1.9.4"

# needed for individual tools
md2 = "0.10.2"
md4 = "0.10.2"
md5 = "0.7"
sha1 = "0.10.5"
sha2 = "0.10.7"
